infra/alwaldend.com/dc/residential/cl1/kustomize/argocd/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: argocd
  labels:
    kubernetes.io/metadata.name: argocd
