infra/alwaldend.com/dc/residential/cl1/kustomize/argocd/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: argocd-server
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`argocd.cl1.residential.dc.alwaldend.com`)
      priority: 10
      services:
        - name: argocd-server
          port: 80
    - kind: Rule
      match: Host(`argocd.cl1.residential.dc.alwaldend.com`) && Header(`Content-Type`, `application/grpc`)
      priority: 11
      services:
        - name: argocd-server
          port: 80
          scheme: h2c
  tls:
    certResolver: default
